-= Changelog =-
0.3
+ Add reboot function
+ Manage Linux Device
0.2
+ Web interface
+ Put sample data in sql files and delete sqlite DB
~ Replace function os.system to subproccess
0.1
+ Ping command
+ WakeUp command
+ Shutdown (Windows Station only)
+ History command
0.0.2
+ Karma : history of operations
0.0.1
~ Correct problem with case in device name